📝 docs: 내 플레이리스트 페이지와 상세 정보 페이지의 통일성 추가
- my-playlist와 playlist_detail 페이지에서 같은 정보를 같은 단어로 보여주도록 수정
- Play 버튼을 눌렀을 때 어떤 링크로 연결되는지 명확히 표기

--- a/vibeapp/templates/playlist/playlist_detail.html
+++ b/vibeapp/templates/playlist/playlist_detail.html
@@ -11,7 +11,7 @@
                     <h2 class="mb-0">{{ playlist.name }}</h2>
                     <span class="platform-icon-playlist display-4"
                           title="{{ playlist.platform }}"></span>
-                    {% if playlist.is_public %}<span class="badge bg-success">공개</span>{% endif %}
+                    {% if playlist.is_public %}<span class="badge bg-success">Public</span>{% endif %}
                 </div>
             </div>
         </div>
@@ -27,7 +27,7 @@
                                 <th>Artist</th>
                                 <th>Album</th>
                                 <th>Time</th>
-                                <th>Link</th>
+                                <th>Link({{ playlist.platform }})</th>
                             </tr>
                         </thead>
                         <tbody>
